@@ -17,10 +17,9 @@ SLOT="0"
 KEYWORDS=""
 IUSE=""
 
-RDEPEND="sys-devel/gettext
-	${PYTHON_DEPS}"
-DEPEND="${RDEPEND}
-	app-emulation/ovirt-engine-sdk"
+DEPEND="${PYTHON_DEPS}"
+RDEPEND="${DEPEND}
+	>=dev-python/python-exec-0.3"
 
 src_prepare() {
 	eautoreconf
