@@ -1,3 +1,7 @@
+  04 Apr 2013; Alon Bar-Lev <alonbl@redhat.com>
+  ovirt-log-collector-3.2.1.ebuild, ovirt-log-collector-9999.ebuild:
+  Use >=dev-python/python-exec-0.3 as it supports symlinks
+
 *ovirt-log-collector-3.2.1 (03 Apr 2013)
 
   03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com>
